[package]
name = "morphoid"
version = "0.1.0"
authors = ["Kirill Lastovirya <kirill.lastovirya@gmail.com>"]

[dependencies]
itertools = "0.8.0"
lazy_static = "1.3.0"
time = "*"
rand = "0.6.5"

actix-web = "1.0.0-beta.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1"
env_logger = "*"
json = "0.11.13"
dotenv = "0.10"

#rollbar = "0.5.1"
