[package]
name = "rust-morphoid"
version = "0.1.0"
authors = ["Kirill Lastovirya <kirill.lastovirya@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "0.8.0"
lazy_static = "1.3.0"
time = "*"
rand = "0.6.5"

actix-web = "1.0.0-beta.5"
actix-files = "0.1.1"

futures = "0.1"
env_logger = "*"
json = "0.11.13"
serde = "1.0"
serde_json = "1.0"
#rollbar = "0.5.1"

morphoid = { path = "./morphoid", version = "0.1.0" }
api = { path = "./api", version = "0.1.0" }

[workspace]
members= [
    "morphoid",
    "api"
]

[[bin]]
name = "morphoid"
path = "bin/main.rs"