[package]
name = "api"
version = "0.1.0"
authors = ["Kirill Lastovirya <kirill.lastovirya@gmail.com>"]
edition = '2018'

[dependencies]
json = "0.11.13"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.3.0"
rand = "0.6.5"
actix-web = "1.0.0-beta.5"

morphoid = { path = "../morphoid", version = "0.1.0" }
